objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>cc_Event_Name__c</fullName>
        <description>This field contains an un-formatted concatenated string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>Event Name (CC)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Gift_Aid_Amount__c</fullName>
        <description>This field contains the donation gift aid amount provided by Charity Checkout (CC). It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Gift Aid Amount (CC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_Items__c</fullName>
        <description>This field contains an un-formatted concatenated string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>Items (CC)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cc_Page_ID__c</fullName>
        <description>This field contains the Page ID which the donation was made towards. It is populated by the Charity Checkout Zapier trigger (Giveclarity case #4254).</description>
        <externalId>true</externalId>
        <inlineHelpText>The Charity Checkout page ID which the donation was made towards.</inlineHelpText>
        <label>Page ID (CC)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Payment_Fields__c</fullName>
        <description>This field contains an un-formatted concatenated string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>Payment Fields (CC)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cc_Payment_Provider_Fee__c</fullName>
        <description>This field contains a payment provider fee which would be charged by Charity Checkout (CC) relative to this donation. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Payment Provider Fee (CC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_User_Message__c</fullName>
        <description>This field contains an un-formatted concatenated string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>User Message (CC)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>This record type is used for individual giving and corporate giving.</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift_Aid_Income</fullName>
        <active>true</active>
        <businessProcess>Gift Aid Income</businessProcess>
        <description>This record type is used to record gift aid income.</description>
        <label>Gift Aid Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Grant</businessProcess>
        <description>This record type is used for grants.</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Kind_Gift</fullName>
        <active>true</active>
        <businessProcess>In-Kind Gift</businessProcess>
        <description>This record type is used for goods or services received in kind (not monetary donations).</description>
        <label>In-Kind Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy_Gift</fullName>
        <active>true</active>
        <businessProcess>Legacy Gift</businessProcess>
        <description>This record type is used for legacy giving.</description>
        <label>Legacy Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>MajorGift</fullName>
        <active>true</active>
        <businessProcess>Major Gift</businessProcess>
        <description>This record type is used for major donations (both individual and corporate giving).</description>
        <label>Major Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Matching_Gift</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Matching Donation from an Donor&apos;s Employer or other Organization</description>
        <label>Matching Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Membership</businessProcess>
        <description>This record type is used for membership donations.</description>
        <label>Membership</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_OR_Primary_Contact_Mandatory</fullName>
        <active>true</active>
        <description>Triggers if both the Account field and the Primary Contact field are blank</description>
        <errorConditionFormula>AND (
$Setup.Process_Control__c.Opportunity_Validation__c = TRUE,
ISBLANK ( AccountId ),
ISBLANK ( npsp__Primary_Contact__c )
)</errorConditionFormula>
        <errorMessage>You must populate either the Primary Contact or the Account field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>E2F_Process_Complete_No_Edit</fullName>
        <active>true</active>
        <description>This validation rule ensures that the Close Date, the Stage and the Amount fields cannot be changed if the opportunity&apos;s GAU allocations have been exported to VSA&apos;s accounting system. This is to ensure data integrity (VSA-33).</description>
        <errorConditionFormula>AND(
  $Setup.Process_Control__c.Opportunity_Validation__c = TRUE,
  Export_to_Finance_Completed__c = TRUE,
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;VSA Finance&quot;,
  OR(
    ISCHANGED ( CloseDate ),
    ISCHANGED ( StageName ),
    ISCHANGED ( Amount ),
    ISCHANGED ( VAT_Code__c )
    )
)</errorConditionFormula>
        <errorMessage>This opportunity has been reconciled with the accounting system, and certain values can therefore not be changed. Please contact a Salesforce system administrator if relevant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gift_Aid_Status_Cant_Edit</fullName>
        <active>true</active>
        <description>This validation rule ensures that certain properties can&apos;t be edited on opportunity records where the Gift Aid Status is set to either &quot;Under review | Claim in progress | Paid by HMRC&quot; (VSA-32).</description>
        <errorConditionFormula>AND(
     $Setup.Process_Control__c.Opportunity_Validation__c ,
   OR(
      ISCHANGED ( CloseDate ),
      ISCHANGED ( AccountId ),
      ISCHANGED ( gcga__Gift_Aidable_Amount__c ),
      ISCHANGED ( npsp__Primary_Contact__c )
     ),
   OR(
      ISPICKVAL (  gcga__Gift_Aid_Status__c , &quot;Under review&quot;),
      ISPICKVAL (  gcga__Gift_Aid_Status__c , &quot;Claim in progress&quot;),
      ISPICKVAL (  gcga__Gift_Aid_Status__c , &quot;Paid by HMRC&quot;)
     )
)</errorConditionFormula>
        <errorMessage>This opportunity is part of a gift aid claim which has been submitted to the HMRC, and certain values can therefore not be changed. Please contact a Salesforce system administrator if relevant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Method_Required_When_Closed_Won</fullName>
        <active>true</active>
        <description>This validation rule ensures that the Payment Method-field cannot be blank when the opportunity is closed. This ensures data consistency for the sake of the Clarity Gift Aid process (VSA-32).</description>
        <errorConditionFormula>AND(
    $Setup.Process_Control__c.Opportunity_Validation__c = TRUE,
    IsWon = TRUE,
    RecordType.DeveloperName &lt;&gt; &quot;In_Kind_Gift&quot;,
    ISPICKVAL (  Payment_Method__c , &quot;&quot; )
)</errorConditionFormula>
        <errorDisplayField>Payment_Method__c</errorDisplayField>
        <errorMessage>A &apos;Received&apos; opportunity must have a payment method. This is required for the gift aid claim process. Please choose an applicable payment method.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAT_Code_Required_When_Closed_Won</fullName>
        <active>true</active>
        <description>This validation rule ensures that the VAT Code-field cannot be blank when the opportunity is closed. This ensures data consistency for the sake of the Export to Finance process (VSA-33).</description>
        <errorConditionFormula>AND(
    $Setup.Process_Control__c.Opportunity_Validation__c = TRUE,
    IsWon = TRUE,
    RecordType.DeveloperName &lt;&gt; &quot;In_Kind_Gift&quot;,
    ISPICKVAL ( VAT_Code__c, &quot;&quot; )
)</errorConditionFormula>
        <errorDisplayField>VAT_Code__c</errorDisplayField>
        <errorMessage>A &apos;Received&apos; opportunity must have a VAT code. This is required for the financial reconciliation process. Please choose an applicable VAT code.</errorMessage>
    </validationRules>
</CustomObject>